# nncc

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  conanfile.py  install_deps.sh
cmake/: imgui.cmake  target_shader.cmake
examples/: CMakeLists.txt
examples/00-minimal-bgfx-glfw/: CMakeLists.txt  logo.h  main.cpp  python.cpp
examples/001-helloworld-mt/: CMakeLists.txt  main.cpp
examples/002-base-context/: CMakeLists.txt  main.cpp
examples/003-imgui-demo/: CMakeLists.txt  main.cpp
examples/099-tensor-exchange/: CMakeLists.txt  graph.h  main.cpp  node_editor.h
include/nncc/context/: shared_context.h
src/lib/: CMakeLists.txt
src/lib/nncc/: lib.cpp
src/lib/nncc/common/: image.cpp  image.h  types.h
src/lib/nncc/context/: context.cpp  context.h  event.cpp  event.h  glfw_utils.cpp  glfw_utils.h  hid.cpp  hid.h
src/lib/nncc/engine/: camera.cpp  camera.h  loop.cpp  loop.h  world_math.cpp  world_math.h  world_object.cpp  world_object.h
src/lib/nncc/hid/: context.cpp  context.h
src/lib/nncc/input/: event.cpp  event.h  hid.h
src/lib/nncc/python/: shm_communication.cpp  shm_communication.h  tensor_plane.h  tensor_registry.cpp  tensor_registry.h
src/lib/nncc/render/: batch_renderer.cpp  batch_renderer.h  entry.cpp  entry.h  primitives.h  renderer.cpp  renderer.h  rendering.cpp  rendering.h  surface.cpp  surface.h  system.cpp  system.h
src/lib/nncc/render/bgfx/: memory.cpp  memory.h
src/lib/nncc/render/shaders/: shaders.cmake
src/lib/nncc/render/shaders/default_diffuse/: fs_default_diffuse.sc  vs_default_diffuse.sc
src/nncc/: CMakeLists.txt
src/nncc/common/: X11_undefine_none.h  image.cpp  image.h  loguru.cpp  platform.h  types.h  undefine_X11_macros.h
src/nncc/compute/: algebra_ops.cpp  algebra_ops.h  graph.cpp  graph.h  types.cpp  types.h
src/nncc/context/: context.cpp  context.h  context_instance.cpp  glfw_utils.cpp  glfw_utils.h  macos.mm
src/nncc/debug/: bgfx_stats.h
src/nncc/engine/: camera.cpp  camera.h  events.h  loop.cpp  loop.h  timer.cpp  timer.h
src/nncc/gui/: context.h  gui.h  guizmo.cpp  guizmo.h  imgui_bgfx.cpp  imgui_bgfx.h  imgui_demo.h  imgui_stdlib.h  picking.cpp  picking.h
src/nncc/gui/fonts/: icons_kenney.ttf.h
src/nncc/gui/imgui/: imgui_bgfx.cpp  imgui_bgfx.h  imgui_folly.h  imgui_smart_strings.cpp  imgui_stdlib.h
src/nncc/gui/nodes/: graph.cpp  graph.h
src/nncc/gui/shaders/: fs_imgui_image.sc  fs_ocornut_imgui.sc  vs_imgui_image.sc  vs_ocornut_imgui.sc
src/nncc/gui/shaders/picking/: fs_picking.sc  varying.def.sc  vs_picking.sc
src/nncc/input/: event.h  hid.cpp  hid.h  input.cpp  input.h
src/nncc/math/: types.cpp  types.h
src/nncc/nodes/: graph.cpp  graph.h  graph_.h  poly_value.cpp  poly_value.h
src/nncc/rendering/: batch_renderer.cpp  batch_renderer.h  primitives.h  renderer.cpp  renderer.h  rendering.cpp  rendering.h  surface.cpp  surface.h
src/nncc/rendering/bgfx/: loaders.cpp
src/nncc/rendering/shaders/default_diffuse/: fs_default_diffuse.sc  vs_default_diffuse.sc
src/nncc/rpc/: redis_communicator.cpp  redis_communicator.h
src/pynncc/: CMakeLists.txt  module.cpp
src/pynncc/compute/: init.cpp  python_nodes.cpp  python_nodes.h  pytorch_nodes.cpp  pytorch_nodes.h  variable_manager.h
src/pynncc/python/: ops.cpp  ops.h  pynncc.py  pynnccp_test.py
src/pynncc/torch/: CMakeLists.txt  compute_nodes.cpp  compute_nodes.h  shm_communication.cpp  shm_communication.h  tensor_registry.cpp  tensor_registry.h
